[project]
name = "anytoggl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "environs>=14.5.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "tenacity>=9.1.2",
    "typer>=0.20.1",
]
[project.scripts]
anytoggl = "anytoggl.cli:app"
